--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 
 COPY pom.xml .
 
+RUN apt-get update && apt-get install -y maven && rm -rf /var/lib/apt/lists/*
+
 RUN mvn dependency:go-offline
 
 COPY src ./src
@@ -22,4 +24,4 @@ COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 9090
 
-ENTRYPOINT ["java","-jar","/app/target/premier-zone-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/app/app.jar"]
